[bdist_wheel]
universal = true

[metadata]
description-file = README.md

[flake8]
# Let's ignore E501 (line too long) warnings for now.
#
# There are A LOT of W504 warnings, and getting rid of them is
# dangerous because there are lots of parentheses and making flake8
# happy but changing the logic would be easy to do.
ignore = E501,W504
exclude = venv,.tox
